[project]
name = "multiagent_blog_writer"
version = "0.1.0"
description = "MultiAgent_Blog_Writer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.7.2",
]

[project.scripts]
multiagent_blog_writer = "multiagent_blog_writer.main:run"
run_crew = "multiagent_blog_writer.main:run"
train = "multiagent_blog_writer.main:train"
replay = "multiagent_blog_writer.main:replay"
test = "multiagent_blog_writer.main:test"
run_with_trigger = "multiagent_blog_writer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
